--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
-    <meta name="viewport" content="width=device-width">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -15,17 +16,18 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>刘梦瑜-GitHub</h1>
-        <p>刘梦瑜GitHub博客</p>
-
-        <p class="view"><a href="https://github.com/super-yuyu/super_lmy.github.io">View the Project on GitHub <small>super-yuyu/super_lmy.github.io</small></a></p>
-
+        <h1 class="header">刘梦瑜-GitHub</h1>
+        <p class="header">刘梦瑜GitHub博客</p>
 
         <ul>
-          <li><a href="https://github.com/super-yuyu/super_lmy.github.io/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/super-yuyu/super_lmy.github.io/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/super-yuyu/super_lmy.github.io">View On <strong>GitHub</strong></a></li>
+          <li class="download"><a class="buttons" href="https://github.com/super-yuyu/super_lmy.github.io/zipball/master">Download ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/super-yuyu/super_lmy.github.io/tarball/master">Download TAR</a></li>
+          <li><a class="buttons github" href="https://github.com/super-yuyu/super_lmy.github.io">View On GitHub</a></li>
         </ul>
+
+        <p class="header">This project is maintained by <a class="header name" href="https://github.com/super-yuyu">super-yuyu</a></p>
+
+
       </header>
       <section>
         <h1>
@@ -36,11 +38,10 @@
 <p>I'm Yours</p>
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://github.com/super-yuyu">super-yuyu</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+		
   </body>
 </html>
